<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_first_name"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/doctor_s_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_last_name"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/last_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/doctor_s_last_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_staff_id"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/staff_id_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/doctor_s_staff_id"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:elevation="2dp"
        android:background="@color/colorAccent"/>
</LinearLayout>