<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_staff_id"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/doctor_id_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/doctor_s_staff_id"
        android:gravity="center"/>


    <Button
        android:id="@+id/btn_enter"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:elevation="2dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_register_as_a_new_doctor_here"
        android:layout_marginTop="50dp"
        android:layout_gravity="right"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginRight="20dp"/>
</LinearLayout>